--- a/_posts/2019-07-09-the-us-narrative-today.html
+++ b/_posts/2019-07-09-the-us-narrative-today.html
@@ -2671,108 +2671,107 @@ stories:
   domain: http://www.eagletribune.com/
   link: https://www.eagletribune.com/region/soccer-star-appeals-for-return-of-dog-stolen-in-los/article_b0136d26-e259-55c1-bf60-0943a833124c.html
 images:
-- name: berlinwall-DSC-0084-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-blue-electricity.jpg
-- name: downtown-trucksilo-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-far-away.jpg
-- name: san-francisco-street-view-san-francisco-street-view-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dark-rain.jpg
-- name: ellis-island-ellisisland-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-mucha-mult.jpg
-- name: white-house-lawn-white-house-lawn-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-monet-one.jpg
-- name: christianity-christianity-under-construction-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-yellow-paper.jpg
-- name: lincoln-memorial-lincolnmemorial-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-space-pizza.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-graham-sutherland.jpg
+- name: store-on-corner-store-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dark-rain.jpg
+- name: yosemite-yosemite-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-green-zuma.jpg
+- name: stories-dark-clouds-la-buildings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-dark-clouds-la-buildings.jpg
+- name: oldcabin-store-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-colorful-dream.jpg
+- name: aws-s3-stories-server-cloud1-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-cloud1-internet-numbers.jpg
+- name: fence-mexico-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-pablo-blue.jpg
+- name: art-museum-art-museum-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-plentiful.jpg
+- name: docks-docks-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-space-pizza.jpg
+- name: liberty-back-statue-liberty-back-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-yellow-paper.jpg
+- name: old-school-house-old-schoolhouse-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-attack-planes.jpg
+- name: hollywood-building-hollywood-building-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-smooth-ride.jpg
+- name: ellis-island-ellisisland-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-post-modern.jpg
+- name: oldbarn-oldbarn-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-sunday.jpg
+- name: containership-containership-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-gred-mash.jpg
+- name: abe-lincoln-one-yellow-paper-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-paper-file-00-00-15-87.jpg
+- name: ellis-island-ellis-island-room-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-smooth-ride.jpg
+- name: downtown-trucksilo-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-graham-sutherland.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit-2.jpg
+- name: abandonedbuildings_crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_crabapple.jpg
+- name: eduardo-eduardo-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-purple-pond.jpg
+- name: blossombar-yellow-paper-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-paper-file-00-00-50-62.jpg
+- name: miamibeach-miamibeach-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-atari-asteroids.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-circuit-4.jpg
+- name: walled-garden-walled-garden-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-light-dali.jpg
+- name: two-sattelite-dishes-uncle-sam.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/two-sattelite-dishes-uncle-sam.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-nazi-poster.jpg
+- name: supreme-court-supremecourt-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-matrix.jpg
+- name: bordercrossing-bordercrossing-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-hot-spicy.jpg
 - name: walled-garden-walled-garden-satan-red.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-satan-red.jpg
+- name: mistywoods-babyfoot-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-blue-brush.jpg
+- name: old-door-lock-old-door-lock-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-circuit.jpg
+- name: aws-s3-square-statue-face-open-mouth-copper-circuit-square.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-statue-face-open-mouth-copper-circuit-square.png
+- name: oldsmallboat-oldsmallboat-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-pablo-blue.jpg
+- name: lincoln-memorial-lincolnmemorial-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-cinnamon-rolls.jpg
+- name: udnie-IMG_6174.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6174.jpg
+- name: oldroad-old-road-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-yellow-paper.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-yellow-collage.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-yellow-collage.JPG
+- name: beach-rocks-beach-rocks-currents-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-circuit-4.jpg
 - name: downtown-la-marcel-duchamp.JPG
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-marcel-duchamp.JPG
-- name: old-door-lock-old-door-lock-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-matrix.jpg
-- name: containership-containership-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-yellow-collage.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-gred-mash.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-gred-mash.JPG
-- name: san-francisco-street-view-san-francisco-street-view-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-graham-sutherland.jpg
-- name: meadowbutterfly-meadow-butterfly-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-emily-carr.jpg
-- name: death-valley-death-valley-national-park-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-rainbow-festival.jpg
-- name: containership-bw-storytelling.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling.png
-- name: birdhouse-birdhouse-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-cinnamon-rolls.jpg
-- name: old-door-lock-old-door-lock-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-deep-connections.jpg
-- name: rockingchair-rockingchair-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dark-soul.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-satan-red.jpg
-- name: berlinwall-DSC-0084-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-purp-paper.jpg
-- name: scream-IMG_7289.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7289.jpg
-- name: aws-s3-stories-servers-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-servers-blue-circuit.jpg
-- name: hollywood-building-hollywood-building-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-soul.jpg
-- name: cargo-ship-cargo-ship-on-sea-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-circuit-5.jpg
-- name: ellis-island-ellisisland-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-purple-storm.jpg
-- name: capital-battle-capitolbattle-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-cinnamon-rolls.jpg
-- name: old-door-lock-old-door-lock-2-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-satan-red.jpg
-- name: oldcabin-oldcabin-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dark-soul.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
-- name: carry-load-carryload-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-light-dali.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-emily-carr.jpg
-- name: old-house-oldhouse-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-purple-storm.jpg
-- name: oldcabin-oldcabin-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-marcel-duchamp.jpg
-- name: aws-s3-mountainlake-mountainlake-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still-1200.jpg
-- name: windowmountain-window-mountain-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-pablo-blue.jpg
-- name: legal-statue-legalstatue-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-atari-asteroids.jpg
-- name: store-on-corner-store-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dali-three.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-colorful-blocks.jpg
-- name: white-house-lawn-white-house-lawn-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-post-modern.jpg
-- name: capital-battle-capitolbattle-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-light-dali.jpg
-- name: abandonedbuildings_green_zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_green_zuma.jpg
-- name: eduardo-eduardo-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-graham-sutherland.jpg
-- name: file-00-00-00-00 2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-00-00
-    2.jpg
-- name: locked-up-steam-lock-up-steam-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-satan-red.jpg
-- name: death-valley-death-valley-national-park-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-smooth-ride.jpg
-- name: dc-statue-dcstatue-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-space-pizza.jpg
-- name: walled-garden-walled-garden-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-aqua.jpg
-- name: downtheline-downtheline-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-kandinsky-bv.jpg
-- name: art-museum-art-museum-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-feed-people.jpg
-- name: border-crossing-bordercrossing-blue-brush.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-blue-brush.png
+- name: old-church-oldchurch-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dry-skin.jpg
+- name: stories-statue-face-open-mouth-copper-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-statue-face-open-mouth-copper-circuit.png
+- name: mediterranean-mediterranean-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-post-modern.jpg
+- name: mosaic-face-mosaic-face-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-deep-connections.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-hot-spicy.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-hot-spicy.png
+- name: san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
+- name: old-gas-pumps-oldgaspumps-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-atari-missle.jpg
+- name: statue-of-liberty-front-view-statueofliberty-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-ww2-color.jpg
+- name: mistywoods-babyfoot-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-atari-asteroids.jpg
+- name: server-cloud-server-racks-clouds-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-clean-view.jpg
+- name: berlinwall-DSC-0084-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dark-dali.jpg
 ---
 First Phase Of The Lofts At Leeson's To Open Soon In Elwood.&nbsp;Unaffiliated Voters Usurp Dems In Surry.&nbsp;Anna Gunn Horrified By Sexism.&nbsp;Two Indicted For Unlawful Possession Of Weapon.&nbsp;Trump Defends Acosta But Will Look Into Epstein Plea Deal.&nbsp;Officer Injured In Wreck.&nbsp;Slow Down Curve Ahead.&nbsp;Why Does South Bossier Not See The Same Growth As Rest Of The City?.&nbsp;
